--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
     "name": "produccionMinimo",
     "description": "flujo optimizado para utilizarse de forma local de forma ligera para parametros criticos",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "@flowfuse/node-red-dashboard": "1.16.0",
+        "node-red-contrib-influxdb": "0.7.0",
+        "node-red-contrib-modbus": "5.31.0",
+        "node-red-contrib-stackhero-influxdb-v2": "1.0.4",
+        "node-red-dashboard": "3.6.5",
+        "node-red-node-serialport": "2.0.2"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flows.json",
